[package]
name = "mvn-assembly"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0.6"
nom = "7.1.1"
nom_locate = "4.0.0"
dotenv_codegen = "0.15.0"
utils = { path = "../mvn-utils", package = "mvn-utils" }
annotate-snippets = { version = "0.9.1", features = ["color"] }

[dev-dependencies]
pretty_assertions = "1.2.1"
