[package]
name = "mvn-cli"
version = "0.1.0-alpha"
edition = "2021"
default-run = "mvn-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
clap-num = "1.0.2"
utils = { path = "../mvn-utils", package = "mvn-utils" }
assembler = { path = "../mvn-assembler", package = "mvn-assembler" }
linker = { path = "../mvn-linker", package = "mvn-linker" }
relocator = { path = "../mvn-relocator", package = "mvn-relocator" }
